--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,7 @@
     "import/prefer-default-export": "off",
     "no-console": "off",
     "no-promise-executor-return": "off",
+    "class-methods-use-this": "off",
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn"
   }
